# Ryanair-Python

./: .gitignore  pyproject.toml  readme.md  requirements.txt  setup.py
ryanair/: SessionManager.py  ryanair.py  types.py
