[project]
name = "ryanair-python"
version = "1.0.0"
description = "Extension of ryanair-py"
authors = [
    {name = "Victor BmLabs", email = "victor@bmlabs.eu"},
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "backoff",
]

[project.urls]
Homepage = "https://github.com/victorbmlabs/RyanAir-Python"
Repository = "https://github.com/victorbmlabs/RyanAir-Python"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ryanair"]